# knowledge-support-ai-agent

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: README.md  chat.py  documents.py
app/application/: README.md
app/cli/: README.md  context.py  deps.py  main.py
app/config/: README.md  ini.py  logging.py  prompts.ini  settings.py  telemetry.py
app/container/: __init__.py  support.py
app/infrastructure/: README.md
app/models/: README.md  __init__.py  contact.py  conversation.py  document.py  document_chunk.py  message.py
app/repositories/: README.md  contact.py  conversation.py  document_chunk.py  message.py
app/schemas/: README.md  chat.py  documents.py
docs/: architecture.md  data-model.md  development.md
docs/adr/: 001-clean-architecture.md  001-layered-architecture.md  002-architecture-first-technology-second.md  003-dependency-inversion.md  004-use-case-oriented-application-layer.md  005-repository-pattern.md  006-unit-of-work.md  007-provider-independence.md  ADR_BASE_TEMPLATE.md  README.md
docs/guidelines/: README.md  ai-architecture-principles.md  clean-architecture.md  dependency-injection.md  error-handling.md  layered-architecture.md  logging.md  writing-agent-tools.md  writing-api-endpoints.md  writing-application-services.md  writing-cli-commands.md  writing-containers.md  writing-database-models.md  writing-infrastructure-clients.md  writing-logs.md  writing-observability.md  writing-repositories.md  writing-request-schemas.md  (+3 more)
migrations/: env.py
tests/: conftest.py
(+127 files in other folders)
