[project]
name = "knowledge-support-ai-agent"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "openai>=1.50.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=26.1.0",
    "typer>=0.12.0",
    "tiktoken>=0.7.0",
    "opentelemetry-api>=1.25.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]

[project.scripts]
agent = "app.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "pre-commit>=4.6.0",
    "import-linter>=2.0",
]

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = ["**/sqlalchemy/migrations/", "tests/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["tests/", "sqlalchemy/migrations/"]

[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Application does not import from infrastructure or api"
type = "forbidden"
source_modules = ["app.application"]
forbidden_modules = ["app.infrastructure", "app.api"]

[[tool.importlinter.contracts]]
name = "Infrastructure does not import from api"
type = "forbidden"
source_modules = ["app.infrastructure"]
forbidden_modules = ["app.api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
